# japanese-study-tracker

./: .dockerignore  .env.development.sample  Dockerfile  README.md  docker-compose.yml  fly.toml
.circleci/: config.yml
backend/: Cargo.toml  Dockerfile  dev.Dockerfile
backend/src/: api.rs  main.rs
backend/src/api/: anki.rs  bunpro.rs  cacheable.rs  mod.rs  satori.rs  wanikani.rs
backend/src/api/anki/: anki.proto  data.rs  proto_definitions.rs  request.rs
backend/src/api/anki/fixtures/: no_pending_reviews_or_cards.html  pending_reviews_and_cards.html  protobuf_with_no_reviews_or_new_cards  protobuf_with_review_and_learning_cards  protobuf_with_reviews_and_new_cards
backend/src/api/bunpro/: data.rs  request.rs
backend/src/api/bunpro/fixtures/: bunpro_review_history.json  bunpro_with_no_reviews.json  bunpro_with_reviews.json
backend/src/api/bunpro/request/: stats.rs
backend/src/api/fixtures/: wanikani_with_no_reviews.json  wanikani_with_reviews.json
backend/src/api/satori/: data.rs  request.rs
backend/src/api/satori/fixtures/: current_cards_with_pending_reviews.json  dashboard_minimal.html  new_cards_with_no_cards.json  new_cards_with_pending_cards.json
backend/src/api/satori/request/: current_cards.rs  new_cards.rs  stats.rs
backend/src/api/wanikani/: data.rs  request.rs
backend/src/api/wanikani/fixtures/: daily_goal_met.json  daily_goal_not_met.json
backend/src/templates/: index.html  utils.rs
backend/src/templates/utils/: mod.rs
backend/templates/: anki.html  bunpro.html  satori.html  wanikani.html
frontend/: README.md  dev.Dockerfile  env.d.ts  index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/assets/: base.css  main.css  reset.css
frontend/src/components/: AnkiSection.vue  BunproSection.vue  CappedCount.vue  DailyGoalIndicator.vue  LoadingIndicator.vue  SatoriSection.vue  UpdatedTimestamp.vue  WaniKani.vue  WanikaniSection.vue
frontend/src/components/__tests__/: AnkiData.spec.ts  AnkiSection.spec.ts  BunproSection.spec.ts  CappedCount.spec.ts  SatoriSection.spec.ts  UpdatedTimestamp.spec.ts  WaniKani.spec.ts  WanikaniSection.spec.ts
frontend/src/utils/: errorParsing.ts
frontend/src/views/: HomeView.vue
