[package]
name = "japanese-study-tracker-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.71"
axum = { version = "0.6.18", features = ["macros", "tracing"] }
bytes = "1.4.0"
chrono = { version = "0.4.26", features = ["serde"] }
chrono-tz = "0.8.4"
indexmap = "2.0.0"
prost = "0.11.9"
redis = { version = "0.23.0", features = ["serde_json", "tls-rustls", "tokio-comp", "tokio-rustls-comp"] }
regex = "1.10.2"
reqwest = { version = "0.11.18", default-features = false, features = ["serde_json", "json", "rustls-tls", "cookies"] }
scraper = { version = "0.17.1", features = ["indexmap"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
tokio = { version = "1.28.2", features = ["full"] }
tower-http = { version = "0.4.1", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[dev-dependencies]
base64 = "0.21.2"
