[package]
name = "japanese-study-tracker-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
askama = { version = "0.14.0" }
axum = { version = "0.7.9", features = ["macros", "tracing"] }
bytes = "1.9.0"
chrono = { version = "0.4.39", features = ["serde"] }
chrono-tz = "0.10.0"
indexmap = "2.0.0"
prost = "0.13.4"
redis = { version = "0.27.6", features = [
    "serde_json",
    "tls-rustls",
    "tokio-comp",
    "tokio-rustls-comp",
] }
regex = "1.11.1"
reqwest = { version = "0.12.9", default-features = false, features = [
    "json",
    "rustls-tls",
    "cookies",
] }
scraper = { version = "0.22.0", features = ["indexmap"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.43.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[dev-dependencies]
base64 = "0.22.1"
