[package]
name = "japanese-study-tracker-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
askama = { version = "0.15.6" }
axum = { version = "0.8.8", features = ["macros", "tracing"] }
bytes = "1.11.1"
chrono = { version = "0.4.39", features = ["serde"] }
chrono-tz = "0.10.0"
indexmap = "2.0.0"
prost = "0.14.3"
redis = { version = "0.32.7", features = [
    "json",
    "tls-rustls",
    "tokio-comp",
    "tokio-rustls-comp",
] }
regex = "1.11.1"
reqwest = { version = "0.13.2", default-features = false, features = [
    "json",
    "rustls",
    "cookies",
] }
rustls = { version = "0.23.37", features = ["aws-lc-rs"] }
scraper = { version = "0.22.0", features = ["indexmap"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.43.1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[dev-dependencies]
base64 = "0.22.1"
